--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vue-typescript-admin-template",
+  "name": "honor-admin",
   "version": "1.0.0",
   "private": true,
-  "author": "Chong Guo <armourcy@gmail.com>",
+  "author": "admin00001",
   "scripts": {
     "serve": "concurrently \"npm:mock\" \"vue-cli-service serve\"",
     "test:unit": "jest --clearCache && vue-cli-service test:unit",
